--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,21 @@ button {
     max-width: 600px;
   }
 
+/* Styles specific for thank you page */
+.thank-you {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.thank-you h1 {
+  font-size: 2rem;
+  color: #0051ff;
+}
+
+.thank-you p {
+  font-size: 1.2rem;
+  color: #333;
+}
   header h1 {
     font-size: 2.5rem;
   }
