--- a/css/styles.css
+++ b/css/styles.css
@@ -57,23 +57,20 @@ button {
     max-width: 600px;
   }
 
-  /* Styles specific for thank you page */
-  .thank-you {
-    text-align: center;
-    margin-top: 50px;
-  }
+/* Styles specific for thank you page */
+.thank-you {
+  text-align: center;
+  margin-top: 50px;
+  color: white; /* Set text color to white for better contrast */
+  background: linear-gradient(to right, #008080, #4b0082); /* Added blue to purple gradient */
+  padding: 50px;
+  border-radius: 10px;
+}
 
-  .thank-you h1 {
-    font-size: 2rem;
-    color: #0051ff;
-  }
+.thank-you h1 {
+  font-size: 2rem;
+}
 
-  .thank-you p {
-    font-size: 1.2rem;
-    color: #333;
-  }
-
-  header h1 {
-    font-size: 2.5rem;
-  }
+.thank-you p {
+  font-size: 1.2rem;
 }
